# gkom-draft

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gkom/: __init__.py  camera.py  config.py  window.py
gkom/utils/: __init__.py  model.py  shader.py  structs.py
resources/: config.toml
resources/shaders/: phong.frag  phong.vert  raw_deph.frag  raw_deph.vert  shader.frag  shader.vert  shadow_map.frag  shadow_map.vert
